--- a/JS/registration_form/reg_form.html
+++ b/JS/registration_form/reg_form.html
@@ -16,6 +16,7 @@
             <input class="login inp" type="text" placeholder="Your Login" name="login" required>
             <label class="email_lbl label" for="email">Email</label>
             <span class="error-email error-text">Enter email!</span>
+            <span class="wrong-email error-text">Этот имейл уже существует!</span>
             <input class="email inp" type="text" placeholder="Your Email" name="email" required>
             <label class="label" for="password">Password</label>
             <input class="password inp" type="password" placeholder="Password" name="password" required>
