login page fixed

--- a/JS/registration_form/login_form.html
+++ b/JS/registration_form/login_form.html
@@ -13,8 +13,10 @@
             <h1 class="title">Sign in</h1>
             <label class="email_lbl label" for="email">Email</label>
             <span class="error-email error-text">Enter email!</span>
+            <span class="wrong-email error-text">Такого имейла не существует!</span>
             <input class="email inp" type="text" placeholder="Your Email" name="email" required>
             <label class="password_lbl label" for="password">Password</label>
+            <span class="wrong-pass error-text">Wrong password</span>
             <input class="password inp" type="password" placeholder="Password" name="password" required>
             <button type="submit" class="signin_btn btn">Sign in</button>
         </form>
