--- a/JS/registration_form/main.html
+++ b/JS/registration_form/main.html
@@ -10,10 +10,14 @@
 <body>
     <div class="wrap">
         <header class="header"></header>
-        <main class="main">
-            <h1 class="main-title">Hello!
-            </h1>
+        <main class="main form">
+            <h2 class="main-title">
+            </h2>
+            <h1 class="title">To do list</h1>
+            <label class="label" for="task">Enter new task</label>
+            <input class="task inp" type="text" placeholder="Enter task" name="task">
         </main>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
