--- a/JS/registration_form/main.html
+++ b/JS/registration_form/main.html
@@ -15,7 +15,9 @@
             </h2>
             <h1 class="title">To do list</h1>
             <label class="label" for="task">Enter new task</label>
-            <input class="task inp" type="text" placeholder="Enter task" name="task">
+            <input class="task inp" type="text" placeholder="Enter task" name="task"> 
+            <!-- <button class="btn">Add task</button> -->
+            <ul class="list"></ul>
         </main>
     </div>
     <script src="./main.js"></script>
