--- a/JS/registration_form/reg_form.html
+++ b/JS/registration_form/reg_form.html
@@ -11,9 +11,9 @@
     <div class="wrap">
         <form class="form" action="">
             <h1 class="title">Register</h1>
-            <label class="login_lbl label" for="login">Login</label>
+            <label class="name_lbl label" for="name">Login</label>
             <span class="error-name error-text">Enter login!</span>
-            <input class="login inp" type="text" placeholder="Your Login" name="login" required>
+            <input class="name inp" type="text" placeholder="Your Name" name="name" required>
             <label class="email_lbl label" for="email">Email</label>
             <span class="error-email error-text">Enter email!</span>
             <span class="wrong-email error-text">Этот имейл уже существует!</span>
