--- a/JS/registration_form/reg_form.html
+++ b/JS/registration_form/reg_form.html
@@ -31,6 +31,6 @@
             </div>
         </form>
     </div>
-    <script src="./reg_form.js"></script>
+    <script src="./reg_form.js" type="module"></script>
 </body>
 </html>
