--- a/JS/registration_form/login_form.html
+++ b/JS/registration_form/login_form.html
@@ -21,6 +21,6 @@
             <button type="submit" class="signin_btn btn">Sign in</button>
         </form>
     </div>
-    <script src="./login_form.js"></script>
+    <script src="./login_form.js" type="module"></script>
 </body>
 </html>
