--- a/JS/registration_form/main.html
+++ b/JS/registration_form/main.html
@@ -19,6 +19,6 @@
             <ul class="list"></ul>
         </main>
     </div>
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
