--- a/JS/registration_form/main.html
+++ b/JS/registration_form/main.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <div class="wrap">
-        <header class="header"></header>
+        <header class="header">
+            <div class="flex-wrap">
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="nav-text">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./users.html" class="nav-text">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./posts.html" class="nav-text">Posts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="btn logout-btn">Sign out</button>
+            </div>
+        </header>
         <main class="main form">
             <h2 class="main-title">
             </h2>
@@ -20,5 +37,6 @@
         </main>
     </div>
     <script src="./main.js" type="module"></script>
+    <script src="./header.js" type="module"></script>
 </body>
 </html>
