--- a/JS/registration_form/login_form.html
+++ b/JS/registration_form/login_form.html
@@ -37,6 +37,11 @@
             <span class="wrong-pass error-text">Wrong password</span>
             <input class="password inp" type="password" placeholder="Password" name="password" required>
             <button type="submit" class="signin_btn btn">Sign in</button>
+            <div class="container signin">
+                <p >
+                    <a class="text" href="./reg_form.html">Not registered?</a>
+                </p>
+            </div>
         </form>
     </div>
     <script src="./login_form.js" type="module"></script>
