--- a/JS/registration_form/users.html
+++ b/JS/registration_form/users.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="wrap">
+        <header class="header">
+            <div class="flex-wrap">
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="nav-text">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./users.html" class="nav-text">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./posts.html" class="nav-text">Posts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="btn logout-btn">Sign out</button>
+            </div>
+        </header>
+    </div>
     <script src="./users.js" type="module"></script>
+    <script src="./header.js" type="module"></script>
 </body>
 </html>
