--- a/JS/registration_form/users.html
+++ b/JS/registration_form/users.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="./materialize/materialize.css"  media="screen,projection"/>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -27,8 +28,36 @@
                 <button class="btn logout-btn">Sign out</button>
             </div>
         </header>
+        <table class="striped">
+            <thead>
+              <tr>
+                  <th>Name</th>
+                  <th>Item Name</th>
+                  <th>Item Price</th>
+              </tr>
+            </thead>
+    
+            <tbody>
+              <tr>
+                <td>Alvin</td>
+                <td>Eclair</td>
+                <td>$0.87</td>
+              </tr>
+              <tr>
+                <td>Alan</td>
+                <td>Jellybean</td>
+                <td>$3.76</td>
+              </tr>
+              <tr>
+                <td>Jonathan</td>
+                <td>Lollipop</td>
+                <td>$7.00</td>
+              </tr>
+            </tbody>
+          </table>
     </div>
     <script src="./users.js" type="module"></script>
     <script src="./header.js" type="module"></script>
+    <script type="text/javascript" src="./materialize/materialize.js"></script>
 </body>
 </html>
