--- a/JS/registration_form/users.html
+++ b/JS/registration_form/users.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link type="text/css" rel="stylesheet" href="./materialize/materialize.css"  media="screen,projection"/>
-    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
     <div class="wrap">
@@ -15,7 +15,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="#" class="nav-text">Blog</a>
+                            <a href="./main.html" class="nav-text">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a href="./users.html" class="nav-text">Users</a>
@@ -32,27 +32,13 @@
             <thead>
               <tr>
                   <th>Name</th>
-                  <th>Item Name</th>
-                  <th>Item Price</th>
+                  <th>Email</th>
+                  <th>Role</th>
+                  <th>Status</th>
               </tr>
             </thead>
-    
-            <tbody>
-              <tr>
-                <td>Alvin</td>
-                <td>Eclair</td>
-                <td>$0.87</td>
-              </tr>
-              <tr>
-                <td>Alan</td>
-                <td>Jellybean</td>
-                <td>$3.76</td>
-              </tr>
-              <tr>
-                <td>Jonathan</td>
-                <td>Lollipop</td>
-                <td>$7.00</td>
-              </tr>
+            <tbody class="table-body">
+        
             </tbody>
           </table>
     </div>
