--- a/JS/registration_form/users.html
+++ b/JS/registration_form/users.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link type="text/css" rel="stylesheet" href="./materialize/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="./select.css"  media="screen,projection"/>
     <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 <body>
