delete buttons added

--- a/JS/registration_form/users.html
+++ b/JS/registration_form/users.html
@@ -36,6 +36,7 @@
                   <th>Email</th>
                   <th>Role</th>
                   <th>Status</th>
+                  <th>Delete</th>
               </tr>
             </thead>
             <tbody class="table-body">
@@ -48,23 +49,3 @@
     <script type="text/javascript" src="./materialize/materialize.js"></script>
 </body>
 </html>
-
-<!-- <tr>
-    <th>${obj.name}</th>
-    <th>${obj.email}</th>
-    <th>
-        <select name="select" id="role">
-            <option value="user" selected>user</option>
-            <option value="editor">editor</option>
-            <option value="moderator">moderator</option>
-            <option value="admin">admin</option>
-        </select>
-    </th>
-    <th>
-        <select name="select" id="status">
-            <option value="pending" selected>pending</option>
-            <option value=""></option>
-            <option value=""></option>
-        </select>
-    </th>
-</tr> -->
