--- a/JS/registration_form/posts.html
+++ b/JS/registration_form/posts.html
@@ -27,6 +27,12 @@
                 <button class="btn logout-btn">Sign out</button>
             </div>
         </header>
+        <main>
+            <h2 class="main-title">Posts list</h2>
+            <div class="posts-wrap">
+                
+            </div>
+        </main>
     </div>
     <script src="./posts.js" type="module"></script>
     <script src="./header.js" type="module"></script>
