--- a/JS/registration_form/posts.html
+++ b/JS/registration_form/posts.html
@@ -14,13 +14,13 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="#" class="nav-text">Blog</a>
+                            <a href="./main.html" class="nav-text">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a href="./users.html" class="nav-text">Users</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./posts.html" class="nav-text">Posts</a>
+                            <a href="#" class="nav-text">Posts</a>
                         </li>
                     </ul>
                 </nav>
