--- a/JS/registration_form/posts.html
+++ b/JS/registration_form/posts.html
@@ -28,9 +28,15 @@
             </div>
         </header>
         <main>
-            <h2 class="main-title">Posts list</h2>
-            <div class="posts-wrap">
+            <h2 class="main-title title">Posts list</h2>
+            <div class="flex-wrap">
+                <div class="posts-wrap">
                 
+                </div>
+                <div class="filter-wrap">
+                    <h2 class="title">Search:</h2>
+                    <input type="text" class="search-inp inp" placeholder="Type user name">
+                </div>
             </div>
         </main>
     </div>
