sort logic added

--- a/JS/registration_form/posts.html
+++ b/JS/registration_form/posts.html
@@ -36,6 +36,8 @@
                 <div class="filter-wrap">
                     <h2 class="title">Search:</h2>
                     <input type="text" class="search-inp inp" placeholder="Type user name">
+                    <h2 class="title">Sort by:</h2>
+                    <button class="sort-btn btn">Sort by date</button>
                 </div>
             </div>
         </main>
